storing valuables from user input via prompt method and displaying it through alert method as well as writing to console

--- a/PracticeCode/javascript-basics/3 – Working with Strings/3-Capture Input/start/index.html
+++ b/PracticeCode/javascript-basics/3 – Working with Strings/3-Capture Input/start/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <main></main>
-    <script src="js/transform.js"></script>   
+    <script src="js/prompt.js"></script>   
   </body>
 </html>
