--- a/PracticeCode/javascript-basics/3 – Working with Strings/4-Combine Strings/start/index.html
+++ b/PracticeCode/javascript-basics/3 – Working with Strings/4-Combine Strings/start/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <main></main>
-    <script src="js/prompt.js"></script>   
+    <script src="js/combine.js"></script>   
   </body>
 </html>
