--- a/PracticeCode/javascript-basics/3 – Working with Strings/5-Template Literals/start/index.html
+++ b/PracticeCode/javascript-basics/3 – Working with Strings/5-Template Literals/start/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <main></main>
-    <script src="js/combine.js"></script>   
+    <script src="js/template-literals.js"></script>   
   </body>
 </html>
