--- a/PracticeCode/javascript-basics/3 – Working with Strings/6-Display the Value of a String on a Page/start/index.html
+++ b/PracticeCode/javascript-basics/3 – Working with Strings/6-Display the Value of a String on a Page/start/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <main></main>
-    <script src="js/template-literals.js"></script>  
+    <script src="js/shout.js"></script>
   </body>
 </html>
