--- a/PracticeCode/javascript-basics/4 – Making Decisions in Your Code with Conditional Statements/1-Introducing Conditional Statements/start/index.html
+++ b/PracticeCode/javascript-basics/4 – Making Decisions in Your Code with Conditional Statements/1-Introducing Conditional Statements/start/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <main></main>
-    <script src="js/conditionals.js"></script>  
+    <script src="js/test.js"></script>  
   </body>
 </html>
