--- a/PracticeCode/javascript-functions/2 – Pass Information Into Functions/1-Function Parameters and Arguments/start/index.html
+++ b/PracticeCode/javascript-functions/2 – Pass Information Into Functions/1-Function Parameters and Arguments/start/index.html
@@ -9,6 +9,6 @@
     <main>
       <input type="text" id="info" value="My info">
     </main>
-    <script src="js/multiple-returns.js"></script>  
+    <script src="js/random.js"></script>  
   </body>
 </html>
