expressions vs declarations - expressions need to be written before they are called vs. declarations where it can be called before/after

--- a/PracticeCode/javascript-functions/2 – Pass Information Into Functions/4-Function Declarations vs. Function Expressions/start/index.html
+++ b/PracticeCode/javascript-functions/2 – Pass Information Into Functions/4-Function Declarations vs. Function Expressions/start/index.html
@@ -9,6 +9,6 @@
     <main>
       <!--<input type="text" id="info" value="My info">-->
     </main>
-    <script src="js/scope.js"></script>
+    <script src="js/expressions.js"></script>
   </body>
 </html>
