--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 </main>
 
-
+    <script src="js/insert.js"></script>
     <script src="js/searchFilter.js"></script>
     <script src="js/baguetteBox.js"></script>
     <script src="js/app.js"></script>
